Fix movers on wide images on mobile.

--- a/editor/components/block-list/style.scss
+++ b/editor/components/block-list/style.scss
@@ -395,6 +395,7 @@
 
 		// Movers
 		.editor-block-mover {
+			display: flex;
 			margin-right: auto;
 
 			.editor-inserter,
